fixed dropdown covering menu button on navbar

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -71,7 +71,7 @@ background-color: #0D0D0D;
 .menuLinks {
     background-color: #0D0D0D;
     color: white;
-    margin-top: -3.5%;
+    margin-top: 5%;
     margin-left: 70%;
     margin-right: 20%;
     position: absolute;
@@ -125,8 +125,8 @@ background-color: #0D0D0D;
 
 @media only screen and (max-width: 600px) {
     .menuLinks {
-        margin-top: -2%;
-        margin-left: 60%;
+        margin-top: 6%;
+        margin-left: 65%;
     
     }
 
@@ -145,7 +145,7 @@ background-color: #0D0D0D;
 
 @media only screen and (max-width: 360px) {
     .menuLinks {
-        margin-top: 2%;
+        margin-top: 6%;
         margin-left: 60%;
         font-size: 12px;
     
